--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ flask-cors==4.0.0
 schedule==1.2.0
 lxml==6.0.2
 urllib3==2.0.7
+APScheduler==3.10.4
+pytz==2023.3
 
 # PostgreSQL support for Railway
 psycopg2-binary==2.9.7
