--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ lxml==6.0.2
 urllib3==2.0.7
 APScheduler==3.10.4
 pytz==2023.3
+firebase-admin==6.2.0
 
 # PostgreSQL support for Railway
 psycopg2-binary==2.9.7
