--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
 # Railway deployment requirements
-requests==2.31.0
-beautifulsoup4==4.12.2
-flask==2.3.3
-flask-cors==4.0.0
 schedule==1.2.0
 lxml==6.0.2
 urllib3==2.0.7
-APScheduler==3.10.4
 pytz==2023.3
-firebase-admin==6.2.0
-pandas==2.2.2
+Flask==3.0.0
+Flask-CORS==4.0.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+APScheduler==3.10.4
+python-dotenv==1.0.0
+firebase-admin==6.3.0
+pandas==2.1.3
 numpy==1.26.2
+scipy==1.11.4.3.0
 
 # PostgreSQL support for Railway
 psycopg2-binary==2.9.7
