--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ firebase-admin==6.3.0
 pandas==2.1.3
 numpy==1.26.2
 scipy==1.11.4
+scikit-learn==1.3.2
 
 # PostgreSQL support for Railway
 psycopg2-binary==2.9.7
