--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,11 @@ numpy==1.26.2
 scipy==1.11.4
 scikit-learn==1.3.2
 
-# PostgreSQL support for Railway
+# PostgreSQL support for Railway (use binary version only)
 psycopg2-binary==2.9.7
-psycopg2==2.9.7
 
 # MySQL support (alternative)
 PyMySQL==1.1.0
 
 # Production server
 gunicorn==21.2.0
-
-# Environment management
-python-dotenv==1.0.0
